--- a/_posts/2019-12-24-the-us-narrative-today.html
+++ b/_posts/2019-12-24-the-us-narrative-today.html
@@ -1691,107 +1691,107 @@ stories:
   domain: http://www.sanmarcosrecord.com/
   link: https://www.sanmarcosrecord.com/news/texas-barbershop-worker-shot-over-childs-haircut-police-say
 images:
-- name: bluelake-plentiful-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-plentiful-file-00-00-00-00.jpg
-- name: oldcabin-oldcabin-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-aqua.jpg
-- name: supreme-court-supremecourt-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smooth-ride.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-- name: aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C4NLtWrWMAAMY9d-square.jpg
-- name: liberty-back-statue-liberty-back-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-internet-numbers.jpg
-- name: supreme-court-supremecourt-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-space-pizza.jpg
-- name: yosemite-yosemite-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
-- name: art-lange-otto-the-mocking-of-christ.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-lange-otto-the-mocking-of-christ.jpg
-- name: catacombs-catacombs-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-yellow-collage.jpg
-- name: aws-s3-square-C3JdRtDWMAUqS6L.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L.jpg
-- name: paris-paris-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-really-hot.jpg
-- name: old-granary-field-granaryfield-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-cinnamon-rolls.jpg
-- name: blossombar-colorful-blocks-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-blocks-file-00-00-24-99.jpg
-- name: copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-memorial-to-the-jews-in-berlin-2.jpg
-- name: art-museum-art-museum-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
-- name: downtheline-downtheline-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-space-pizza.jpg
-- name: power-lines-power-lines-empty-space-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-granite.jpg
-- name: nazi-invasion-hallway-long-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-hallway-long-hospital.jpg
-- name: statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-smooth-ride.jpg
-- name: mistywoods-babyfoot-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-constitution.jpg
-- name: old-door-lock-old-door-lock-2-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-dali-two.jpg
-- name: legal-statue-legalstatue-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-yellow-collage.jpg
-- name: san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-marcel-duchamp.jpg
-- name: downtown-los-angeles-downtown-la-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-feed-people.JPG
-- name: braceros-domingo-ulloa-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-building-trees-sky.jpg
-- name: bf-skinner-butterfly-on-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-butterfly-on-flower.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-smoking-cigarette.jpg
-- name: abandonedbuildings_green_zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_green_zuma.jpg
-- name: border-fence-border-fence-on-hill-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-rainbow-festival.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
-- name: oldbarn-oldbarn-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-sunday.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-horiz-circuit.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-matrix.jpg
-- name: old-door-lock-old-door-lock-2-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-colored-circuits.jpg
-- name: aws-s3-stories-new-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-art-museum-light-dali.jpg
-- name: statue-of-liberty-front-view-statueofliberty-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-aqua.jpg
-- name: old-cabin-oldcabin-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-bright-sand.jpg
-- name: meadowbutterfly-meadow-butterfly-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-creativity.jpg
-- name: gears-4882162452-fa3126b38d-b-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-storm.jpg
-- name: eduardo-eduardo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
-- name: cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-ww2-dresden.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-blue-granite.jpg
-- name: stories-downtown-fredericksburg-feed-people.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-feed-people.JPG
-- name: oldhousecars-house-old-cars-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-feed-people.jpg
-- name: rockingchair-face-2-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-face-2-atari-asteroids.jpg
-- name: braceros-domingo-ulloa-crow-stailess-steal.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-crow-stailess-steal.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-blue-granite.jpg
-- name: gypsy-wagon-gypsywagon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
-- name: oldhousecars-house-old-cars-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-creativity.jpg
-- name: old-house-oldhouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-gan-vogh.jpg
+- name: yosemite-yosemite-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-yellow-collage.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-ww2-dresden.jpg
+- name: downtheline-downtheline-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-graham-sutherland.jpg
+- name: nazi-invasion-city-building-trees-sky.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-building-trees-sky.jpg
+- name: statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
+- name: stalin-time-seattle-shipping-people-walking.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-shipping-people-walking.jpg
+- name: braceros-domingo-ulloa-city-vancouver-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-city-vancouver-clouds.jpg
+- name: ellis-island-ellisisland-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-blue-granite.jpg
+- name: hollywood-building-hollywood-building-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crabapple.jpg
+- name: bf-skinner-fishing-ship-in-docks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-fishing-ship-in-docks.jpg
+- name: server-cloud-server-racks-door-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-pablo-blue.jpg
+- name: copper-circuit-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-firetruck-bright-sun.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-attack-planes.png
+- name: old-house-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-three.jpg
+- name: locked-up-steam-lock-up-steam-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-satan-red.jpg
+- name: old-door-lock-old-door-lock-2-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-nazi-poster.jpg
+- name: matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/matrix.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-light-dali.jpg
+- name: powerlines-power-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-marcel-duchamp.jpg
+- name: downtheline-downtheline-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-sunday.jpg
+- name: old-door-lock-old-door-lock-2-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-atari-asteroids.jpg
+- name: downtheline-downtheline-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-sand-paper.jpg
+- name: old-door-lock-old-door-lock-2-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-crabapple.jpg
+- name: paris-paris-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-colorful-dream.jpg
+- name: trucksilo-trucksilo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-crunch-paper.jpg
+- name: stalin-time-stainless-tree-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-stainless-tree-clouds.jpg
+- name: rain-princess-concert-hall-bright-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-concert-hall-bright-lights.jpg
+- name: old-cabin-oldcabin-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-space-pizza.jpg
+- name: bf-skinner-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-bletchley-computer-racks.jpg
+- name: window-window-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-umberto-bocc.jpg
+- name: machine-road-machine-road-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit-3.jpg
+- name: abandonedbuildings_yellow_collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_collage.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-colorful-dream.jpg
+- name: la-muse-downtown-125thstreet.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-125thstreet.jpg
+- name: locked-up-steam-lock-up-steam-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-colorful-dream.jpg
+- name: ellis-island-ellis-island-room-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-purple-pond.jpg
+- name: copper-circuit-flowers-diamon-creek.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-flowers-diamon-creek.jpg
+- name: downtown-trucksilo-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-blue-brush.jpg
+- name: nazi-invasion-DSC_0088.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0088.jpg
+- name: adam-smith-adam-smith-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-ww2-dresden.jpg
+- name: stalin-time-ship-bird-foreground.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-ship-bird-foreground.jpg
+- name: beach-rocks-beach-rocks-currents-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-horiz-circuit.jpg
+- name: old-barn-old-barn-1500-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-sand-paper.jpg
+- name: oldsmallboat-oldsmallboat-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-light-dali.jpg
+- name: rockingchair-rockingchair-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-spagetti-accident.jpg
+- name: bf-skinner-train-small-town-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-small-town-station.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-blue-granite.jpg
+- name: stalin-time-path-in-woods-green-lush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-path-in-woods-green-lush.jpg
+- name: christianity-christianity-under-construction-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-pablo-blue.jpg
+- name: cargo-ship-cargo-ship-on-sea-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-purp-paper.jpg
+- name: curtain-curtain-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-pablo-blue.jpg
 ---
 Why Your Next Downtown Lunch Should Be At Partenope Ristorante.&nbsp;Meet The Virginia Press Foundation Board Members And Executive Committee.&nbsp;Hoosiers Urged To Practice Ice Safety.&nbsp;Wealaka Chapter Celebrates 10th Year.&nbsp;Myers Road Traffic Light Needs Power.&nbsp;Family Has Reason For Thanks.&nbsp;Drugs Seized After State Trooper Checks Disabled Vehicle.&nbsp;SunRail Back On Time After Downed Power Line Causes Delays.&nbsp;
